@@ -16,6 +16,12 @@
 
 2003-02-17  Ian Roxborough  <irox@ix.netcom.com>
 
+	* gui/text.tcl (tkTextUndoPop): When they are no
+	more undo operations on the undo stack, tell the
+	editor to reset the modified status to unmodified.
+
+2003-02-17  Ian Roxborough  <irox@ix.netcom.com>
+
 	* gui/projmng.tcl (sn_select_project): On a
 	Double click, don't invoke the open project
 	proc until a ButtonRelease event is received.
